--- a/01 IoC 컨테이너/06 프로퍼티.md
+++ b/01 IoC 컨테이너/06 프로퍼티.md
@@ -48,13 +48,9 @@ SpEL은 런타임에 객체 참조에 대해 질의하고 조작하는 기능을
 표만 봐서 감이 잡히지 않을 것이니 코드를 보면서 이해해보도록 하겠습니다.    
          
 ##  @Value   
-프로퍼티의 `key`를 사용하여 특정한 값을 호출할 수 있다.           
-키를 정확히 입력해야 하며 값이 없을 경우에 대해 예외 처리를 해주어야 합니다.    
+프로퍼티의 `key`를 사용하여 특정한 값을 호출할 수 있다.              
+`key`를 정확히 입력해야 하며 값이 없을 경우에 대해서는 예외 처리를 해주어야 한다.       
     
-```application.yml``` 파일에 아래와 같은 소스코드를 입력해줍니다.              
-그리고 테스트 프로퍼티값을 매핑해서 사용하는 ```AutoConfigurationApplicationtests``` 클래스를 생성하겠습니다.        
-
-1. ```application.yml``` 에 아래 소스코드 입력         
 ```yml
 property:
   test:
@@ -62,36 +58,6 @@ property:
 propertyTest: test
 propertyTestList: a,b,c
 ``` 
-    
-**application.yml**
-```yml
-server:
-  port: 80
----
-spring:
-  profiles: local
-server:
-  port: 8080
----
-spring:
-  profiles: dev
-server:
-  port: 8081
----
-spring:
-  profiles: real
-server:
-  port: 8082
----
-property:
-  test:
-    name: property depth test
-propertyTest: test
-propertyTestList: a,b,c
-```
-2. ```src``` -> ```test``` -> ```java``` -> ```com``` -> ```demo``` 에 ```AutoConfigurationApplicationtests``` 클래스를 생성         
-3. 아래와 같은 코드를 입력   
-4. 메소드 옆에 run 화살표를 눌러서 실행해준다.   
 
 **AutoConfigurationApplicationtests**     
 ```java
