--- a/01 IoC 컨테이너/06 프로파일.md
+++ b/01 IoC 컨테이너/06 프로파일.md
@@ -6,6 +6,13 @@
 이를 해결하기 위해 **`로컬(local)`, `개발(dev)`, `테스트(test)`, `운영(prod)`에 대해서 설정 값을 다르게** 하고 있으며        
 번거롭지 않게 **파일로 관리해 배포 환경에 따라 설정할 수 있도록 `스프링 프로파일`이라는 기능을 사용한다.**    
       
+**프로파일 정의하기**    
+* **클래스에 정의**
+  * @Configuration @Profile(“test”)
+  * @Component @Profile(“test”)
+* **메소드에 정의**    
+  * @Bean @Profile(“test”)
+    
 **스프링 프로파일이란?**          
 일종의 **빈들의 그룹**이라고 표현을 할 수 있으며              
 애플리케이션 구성의 일부를 분리하고 특정 환경에서만 사용할 수 있도록 하는 방법을 제공한다.            
@@ -27,17 +34,48 @@
 ```java
 @Profile("default")
 @Component
-public class ComponentProfileTarget {
-}
+public class ComponentProfileTarget { }
 ```   
-명시적으로 `@Profile("default")`을 정의하면 해당 프로필에서만 빈이 동작을 할 것이다.      
-   
+명시적으로 `@Profile("default")`을 정의하면 해당 프로필에서만 빈이 동작한다.          
+      
 ```java
+@Component
+public class ComponentProfileTarget { }
+```      
+반대로, 정의하지 않으면 **모든 프로파일에서 동작할 수 있다.**      
+그러니 만약, 모든 프로파일에서 동작을 하도록 하고 싶다면 명시적 설정은 하지 않도록하자      
+  
+## @Cofiguration        
+```java
+@Profile("local")
+@Configuration
+public class ProfileConfiguration {
+
+    @Profile("local")
+    @Bean
+    public ProfileTarget profileTarget() {
+        return new ProfileTarget();
+    }
+
+}
+```  
+`@Configuration 클래스`에 `@Profile`을 사용해서 프로파일별 빈을 등록할 수 있다.   
+클래스에 붙일 경우, 속한 모든 빈들이 `@Profile`전략에 포함이 되고       
+메서드에 붙일 경우, 해당하는 빈만 `@Profile` 전략에 포함이 된다.       
+
+## @Component   
+
+```java
+@Profile("default")
 @Component
 public class ComponentProfileTarget {
 }
-```   
-그렇
+```
+`@Component 클래스`에 `@Profile`을 사용해서 빈을 등록할 수 있다.      
+
+
+
+
 
 
 
